RESOLVED FIXED154301
SamplingProfiler still fails with ASan enabled
https://bugs.webkit.org/show_bug.cgi?id=154301
Summary SamplingProfiler still fails with ASan enabled
Saam Barati
Reported 2016-02-16 11:28:28 PST
More things need SUPPRESS_ASAN
Attachments
patch (9.75 KB, patch)
2016-02-16 13:04 PST, Saam Barati
no flags
Saam Barati
Comment 1 2016-02-16 11:38:35 PST
Saam Barati
Comment 2 2016-02-16 13:04:37 PST
Filip Pizlo
Comment 3 2016-02-16 13:06:08 PST
Comment on attachment 271474 [details] patch totally makes sense
WebKit Commit Bot
Comment 4 2016-02-16 14:01:36 PST
Comment on attachment 271474 [details] patch Clearing flags on attachment: 271474 Committed r196658: <http://trac.webkit.org/changeset/196658>
WebKit Commit Bot
Comment 5 2016-02-16 14:01:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.